Fixed margins, paddings, and spacing

--- a/styles.css
+++ b/styles.css
@@ -93,22 +93,43 @@ main {
 }
 .challenger-names {
 	display:flex;
+	margin:auto;
 	justify-content: space-around;
+	font-size:30px;
+	border-bottom:2px solid gray;
+	width:95%;
+	margin-bottom:10px;
+	padding-top:10px;
 }
 
 .winner {
+	margin-top:30px;
 	display:flex;
 	justify-content: space-around;
+	font-size:30px;
 }
 
 .card-winner {
 	display:flex;
 	justify-content: center;
+	margin-bottom:50px;
+	font-size:30px;
 }
 
 .guesses-timer-clear {
 	display:flex;
+	margin:auto;
+	border-top:2px solid gray;
+	display:flex;
 	justify-content: space-between;
+	width:95%;
+	margin-bottom:10px;
+	padding-top:10px;
+}
+
+.clear-card {
+	border-radius: 50%;
+	background-color:#6E6E6E;
 }
 
 
